namespace Hospital.App.Models;

public enum Sex
{
    Male, Female
}